# routekv-compiler

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
configs/: experiment.yaml  hardware.yaml
docs/: atom_tree_analysis.md  roadmap.md
notebooks/: 01_baseline_profiler.ipynb
routekv/: __init__.py
routekv/compiler/: __init__.py  cost_model.py  ir.py  planner.py
routekv/cost_model/: __init__.py
routekv/kernels/: __init__.py
routekv/policies/: __init__.py  baselines.py  route_aware.py
routekv/profiler/: __init__.py  collector.py  schema.py
routekv/runtime/: __init__.py  memory.py  simulator.py
routekv/scoring/: __init__.py
routekv/utils/: __init__.py  config.py  logging.py  metrics.py
tests/: test_planner.py  test_policies.py  test_profiler.py  test_simulator.py
